# gms-v2

./: CMakeLists.txt  README.rst
cmake/: FindMHD.cmake  FindOAUTH.cmake  common.cmake
src/: CMakeLists.txt  curlutils.cpp  curlutils.h  gms.cpp  libhttpd-utils.cpp  libhttpd-utils.h  oauthcurl.cpp  oauthcurl.h  serverapi.cpp  serverapi.h  serverdata.cpp  serverdata.h  version.cpp  version.h
src/api/: config.cpp  config.h  echo.cpp  echo.h  register.cpp  register.h
src/configure/: gms_config.h.in
tests/: CMakeLists.txt
